# Graphics

./: .gitignore
cube/: cube.h  cube.pro  cubewindow.cpp  cubewindow.h  main.cpp  simpleobject3d.cpp  simpleobject3d.h
earth/: CMakeLists.txt  SquareWindow.cpp  SquareWindow.hpp  main.cpp  sphere.cpp  sphere.hpp
earth/shaders/: square_fragment.glsl
guro/: CMakeLists.txt  MyWidget.cpp  SquareWindow.cpp  SquareWindow.hpp
guro/shaders/: guro_fragment.glsl
mesh/: CMakeLists.txt  main.cpp  obj_loader.cpp  obj_loader.h  widget.cpp  widget.h
morph_graphics/: CMakeLists.txt  GLWindow.h  cubewindow.cpp  cubewindow.h  main.cpp
morph_graphics/shaders/: fragment.fsh  vertex.vsh
phong/: CMakeLists.txt  MyWidget.cpp  MyWidget.hpp  SquareWindow.cpp  SquareWindow.hpp  main.cpp
phong/shaders/: phong_fragment.glsl
road/: CMakeLists.txt  RoadWindow.cpp  cubesettingswindow.cpp  cubesettingswindow.h  cubesettingswindow.ui  fragmentShader3.glsl  vertexShader3.glsl
scene/: CMakeLists.txt  MyWidget.cpp  MyWidget.hpp  SquareWindow.cpp  SquareWindow.hpp  main.cpp
